--- a/.github/workflows/github-actions-push.yml
+++ b/.github/workflows/github-actions-push.yml
@@ -7,6 +7,8 @@ jobs:
       - uses: actions/checkout@v1
       - name: Create report file
         run: date +%s > report.txt
+      - name: add files
+        run: git add report.txt
       - name: Commit report
         run: |
           git config --global user.name 'Harpreet Singh'
