--- a/.github/workflows/github-actions-push.yml
+++ b/.github/workflows/github-actions-push.yml
@@ -2,6 +2,8 @@ name: Push commit
 on: push
 jobs:
   report:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
