--- a/.github/workflows/github-actions-push.yml
+++ b/.github/workflows/github-actions-push.yml
@@ -11,8 +11,8 @@ jobs:
         run: date +%s > report.txt
       - name: Commit report
         run: |
-          git config --global user.name 'Harpreet Singh'
-          git config --global user.email 'harpreet.surdy@gmail.com'
+          git config --global user.name "${{ github.actor }}"
+          git config --global user.email "${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com"
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
           git checkout "${GITHUB_REF:11}"
           git commit -am "Automated report"
